Inclusão biblioteca Lombok e inclusão das anotacoes, remocao dos get e set

--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,13 @@
 		<!-- </dependency> -->
 		<!-- Se Não tiver o JAR JPAMODELGEN ATIVAR -->
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.16</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
